71/ Removed Trinket of Swift Health and made it into a artifact.
72/ Deleted Trinket7 causes it is never implemented.
73/ Reduced sound volume when player spawn skeletron.
74/ Small fixes toward localization.
75/ Nerf Reactive Bombing damage from 90 to 30 damage.
76/ Slightly buff Synergy template in relic.
77/ Small code optimization.
78/ Removed Trinket of Perpetuation and made it into a artifact.
79/ Fixed artifact selection panel scrolling being hard capped and not dynamically changed depending on current artifact amount.
80/ Small fix toward buff missing texture and deleting no longer needed item localization.
81/ Removed Trinket of Ample Perception and made it into a artifact.
82/ Moved a variable from 1 global NPC class to main global NPC file and delete the unnecessary global class.
83/ Deleted Trinket6 ( Trinket of Mythical Conditioning ) because it is similar with Mana Overloader.
84/ Removed Trinket 6 and turn it into a augmentation with a lot of nerfs.
85/ Removed Trinket 5 and turn it into a mod skill.
86/ Added "Disable ring visual" into the configuration setting.
87/ Deleted Chaos Mode.
88/ Nerfed Hybrid Ranger perk.
89/ Deleted Lost In Wonderland perk.
90/ Reworked Trial System and how it functions.
91/ Deleted Weapon Dismantle because it is no longer needed.
92/ Various bug fixes, and fix a rounding error.
93/ Removed Pure Damage player stats from most relic template.
94/ Overall mod clean up.
95/ Deleted Nightmare Mode.
96/ Deleted damage reduction mutation.
97/ Merged Roguelike Overhaul with roguelike mode while still make it enable when player in Boss Rush mode.
98/ Slightly clean up Lootbox.
99/ Clean up the messes created by Merging Roguelike overhaul with roguelike mode.
100/ Added recharged animation for axe.
101/ If player releases LMB during axe recharge animation then the animation will be cancelled and player can attack right away.