@@ -1,9 +1,7 @@
 ﻿using Microsoft.Xna.Framework;
 using Microsoft.Xna.Framework.Graphics;
-using ReLogic.Content;
 using Roguelike.Common.Graphics;
 using Roguelike.Common.Graphics.Structs.TrailStructs;
-using Roguelike.Common.Systems;
 using Roguelike.Common.Utils;
 using Roguelike.Texture;
 using System;
@@ -245,7 +243,7 @@ namespace Roguelike.Common.Mode.RoguelikeMode.RoguelikeChange.ItemOverhaul {
 		}
 		public override void ModifyTooltips(Item item, List<TooltipLine> tooltips) {
 			if (Ignore_AttackSpeed)
-				ModUtils.AddTooltip(ref tooltips, new(Mod, "", "This weapon use speed doesn't get affected by attack speed"));
+				ModUtils.AddTooltip(ref tooltips, new(Mod, "", "This weapon use speed doesn't get affected by attack speed stats"));
 		}
 		public override void UseItemHitbox(Item item, Player player, ref Rectangle hitbox, ref bool noHitbox) {
 			//Since we are using entirely new collision detection, we no longer need this
