@@ -15,6 +15,9 @@
 	    <HintPath>..\ModAssemblies\SubworldLibrary.dll</HintPath>
 	  </Reference>
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Assets\BossArena\" />
+	</ItemGroup>
 
 	<!-- References -->
 
